# rsomics-world

./: .gitignore  CLAUDE.md  CONVENTIONS.md  Cargo.toml  README.md  ROADMAP.md  TODO.md
.github/workflows/: bench.yml  ci.yml  publish.yml  release.yml  yank.yml
archive/rsomics-bam-0.2.0-yanked/: Cargo.toml  README.md
crates/foundation/rsomics-debruijn/: Cargo.toml
crates/foundation/rsomics-debruijn/src/: lib.rs
crates/foundation/rsomics-fm-index/: Cargo.toml
crates/foundation/rsomics-fm-index/src/: lib.rs
crates/foundation/rsomics-fqgz/: Cargo.toml  README.md
crates/foundation/rsomics-fqgz/src/: lib.rs
crates/foundation/rsomics-hmm/: Cargo.toml
crates/foundation/rsomics-hmm/src/: lib.rs
crates/foundation/rsomics-kmer/: Cargo.toml
crates/foundation/rsomics-kmer/src/: count.rs  encode.rs  hash.rs  iter.rs  lib.rs  roll.rs
crates/foundation/rsomics-models/: Cargo.toml
crates/foundation/rsomics-models/src/: lib.rs
crates/foundation/rsomics-pgen/: Cargo.toml
crates/foundation/rsomics-pgen/src/: lib.rs
crates/foundation/rsomics-seqio/: Cargo.toml  README.md
crates/foundation/rsomics-seqio/benches/: seqio_gz.rs
crates/foundation/rsomics-seqio/src/: detect.rs  lib.rs  parse.rs  reader_gz.rs
crates/foundation/rsomics-seqstats/: Cargo.toml  README.md
crates/foundation/rsomics-seqstats/src/: lib.rs
crates/tools/formats/rsomics-bam-idxstats/: Cargo.toml
crates/tools/formats/rsomics-bam-idxstats/src/: cli.rs  lib.rs
crates/tools/formats/rsomics-bam-idxstats/tests/: compat.rs
crates/tools/formats/rsomics-bam-idxstats/tests/golden/: small.bam  small.bam.bai
crates/tools/formats/rsomics-bam-index/: Cargo.toml
crates/tools/formats/rsomics-bam-index/src/: cli.rs  lib.rs
crates/tools/formats/rsomics-bed-closest/: Cargo.toml
crates/tools/formats/rsomics-bed-closest/src/: cli.rs  lib.rs
crates/tools/formats/rsomics-bed-closest/tests/: compat.rs  smoke.rs
crates/tools/formats/rsomics-bed-closest/tests/golden/: b.bed
crates/tools/formats/rsomics-bed-complement/: Cargo.toml
crates/tools/formats/rsomics-bed-complement/src/: cli.rs  main.rs
crates/tools/formats/rsomics-bed-complement/tests/: compat.rs  golden.rs
crates/tools/formats/rsomics-bed-count/: Cargo.toml
crates/tools/formats/rsomics-bed-count/src/: cli.rs
crates/tools/formats/rsomics-bed-count/tests/: compat.rs  smoke.rs
crates/tools/formats/rsomics-bed-count/tests/golden/: three.bed
crates/tools/formats/rsomics-bed-flank/: Cargo.toml
crates/tools/formats/rsomics-bed-flank/src/: cli.rs
crates/tools/formats/rsomics-bed-flank/tests/: compat.rs  smoke.rs
crates/tools/formats/rsomics-bed-genomecov/: Cargo.toml
crates/tools/formats/rsomics-bed-genomecov/src/: cli.rs  lib.rs
crates/tools/formats/rsomics-bed-genomecov/tests/: compat.rs  smoke.rs
crates/tools/formats/rsomics-bed-getfasta/: Cargo.toml
crates/tools/formats/rsomics-bed-getfasta/src/: cli.rs
crates/tools/formats/rsomics-bed-getfasta/tests/: compat.rs  smoke.rs
crates/tools/formats/rsomics-bed-jaccard/: Cargo.toml
crates/tools/formats/rsomics-bed-jaccard/src/: cli.rs  lib.rs
crates/tools/formats/rsomics-bed-jaccard/tests/: compat.rs  smoke.rs
crates/tools/formats/rsomics-bed-jaccard/tests/golden/: b.bed
crates/tools/formats/rsomics-bed-merge/: Cargo.toml
crates/tools/formats/rsomics-bed-merge/src/: cli.rs  main.rs
crates/tools/formats/rsomics-bed-merge/tests/: compat.rs  golden.rs
crates/tools/formats/rsomics-bed-random/: Cargo.toml
crates/tools/formats/rsomics-bed-random/src/: cli.rs  lib.rs
crates/tools/formats/rsomics-bed-random/tests/: compat.rs  smoke.rs
crates/tools/formats/rsomics-bed-shift/: Cargo.toml
crates/tools/formats/rsomics-bed-shift/src/: cli.rs  lib.rs
crates/tools/formats/rsomics-bed-shift/tests/: compat.rs  smoke.rs
crates/tools/formats/rsomics-bed-sort/: Cargo.toml
crates/tools/formats/rsomics-bed-sort/src/: cli.rs  main.rs
crates/tools/formats/rsomics-bed-sort/tests/: compat.rs  golden.rs
crates/tools/formats/rsomics-bed-stats/: Cargo.toml
crates/tools/formats/rsomics-bed-stats/src/: cli.rs  lib.rs
crates/tools/formats/rsomics-bed-stats/tests/: compat.rs  smoke.rs
crates/tools/formats/rsomics-bed-stats/tests/golden/: three.bed
crates/tools/formats/rsomics-bed-subtract/: Cargo.toml
crates/tools/formats/rsomics-bed-subtract/src/: cli.rs  main.rs
crates/tools/formats/rsomics-bed-subtract/tests/: compat.rs  golden.rs
crates/tools/formats/rsomics-bed-to-gff/: Cargo.toml
crates/tools/formats/rsomics-bed-to-gff/src/: cli.rs
crates/tools/formats/rsomics-bed-to-gff/tests/: compat.rs  smoke.rs
crates/tools/formats/rsomics-fasta-count/: Cargo.toml
crates/tools/formats/rsomics-fasta-count/src/: cli.rs  lib.rs
crates/tools/formats/rsomics-fasta-count/tests/: compat.rs  smoke.rs
crates/tools/formats/rsomics-fasta-filter/: Cargo.toml
crates/tools/formats/rsomics-fasta-filter/src/: cli.rs  lib.rs
crates/tools/formats/rsomics-fasta-filter/tests/: compat.rs  smoke.rs
crates/tools/formats/rsomics-fasta-filter/tests/golden/: mixed.fa
crates/tools/rsomics-bam/: Cargo.toml
crates/tools/rsomics-bam/src/: main.rs
crates/tools/rsomics-bam/src/cmd/: view.rs
crates/tools/rsomics-bam/tests/: synth.rs  view_test.rs
crates/tools/rsomics-fastp/: Cargo.toml  README.md
crates/tools/rsomics-fastp/benches/: fastp.rs
crates/tools/rsomics-fastp/src/: filter.rs  io.rs  lib.rs  main.rs  report.rs  stats.rs  trim.rs  umi.rs
crates/tools/rsomics-fastp/tests/: compat.rs  golden_pe.rs  golden_se.rs
crates/tools/rsomics-fastp/tests/golden/: pe_mixed_r2.fastq  se_basic.fastq  se_mixed.fastq
docs/00-overview/: _module-template.md  benchmarking-plan.md  design-principles.md  ecosystem-survey.md  motivation.md
docs/01-foundations/: README.md  compression.md  data-structures.md  indexing.md  io-formats.md  parallelism.md
docs/02-genomics/: README.md  alignment-long-read.md  alignment-short-read.md  annotation.md  assembly.md  preprocessing.md  (+2 more)
scripts/: mkfixture.py  perf-ci.sh  perf-manifest.toml  perfgate.sh
tests/: fixtures-manifest.toml
(+350 files in other folders)
