[workspace]
resolver = "3"
members = [
    "crates/foundation/*",
    "crates/tools/*",
]
exclude = []

[workspace.package]
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Bengerthelorf/rsomics-world"
authors = ["Zane Leong <efd@live.com>"]

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1"
flate2 = "1"

noodles = "0.110"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
strip = true
