[workspace]
resolver = "3"
# Each domain subdir gets added to `members` as its first crate lands.
# Empty subdirs cause cargo metadata to error on unmatched globs, so don't
# pre-list domains with no crates yet.
members = [
    "crates/foundation/*",
    "crates/tools/formats/*",
]
exclude = []

[workspace.package]
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Bengerthelorf/rsomics-world"
authors = ["Zane Leong <efd@live.com>"]

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1"
flate2 = "1"

noodles = "0.110"

# Shared lint posture across every crate in the workspace. Crates inherit
# via `[lints] workspace = true`. The rationale lives in the per-rule
# comment so a future cloner doesn't blindly relax them.
[workspace.lints.rust]
# Forbid unsafe in OUR Rust. FFI-wrapper crates (Quadrant ②, e.g. rsomics-bam)
# pull in unsafe transitively through their *-sys deps; that's the upstream
# crate's surface, not ours. This lint enforces that we never write unsafe.
unsafe_code = "forbid"

[workspace.lints.clippy]
# pedantic catches most of the foot-guns this workspace cares about; warn
# rather than deny so contributors aren't blocked by stylistic preferences.
# The lower priority makes individual #[allow(...)] overrides take effect
# without raising the whole-crate level.
pedantic = { level = "warn", priority = -1 }

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
strip = true
