[package]
name = "rsomics-fm-index"
version = "0.1.0"
description = "FM-index over BWT + suffix array, with backward search / count / locate. Layer A primitive for the rsomics-* tool family."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
categories = ["science", "data-structures"]
keywords = ["fm-index", "bwt", "suffix-array", "bioinformatics", "aligner"]

[dependencies]
divsufsort = "2"
thiserror.workspace = true

[lints]
workspace = true
