[package]
name = "rsomics-hmm"
version = "0.1.0"
description = "Hidden Markov Model inference (Viterbi / forward / backward) for the rsomics-* tool family. Layer A primitive."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
categories = ["science"]
keywords = ["hmm", "viterbi", "bioinformatics", "markov"]

[dependencies]
thiserror.workspace = true

[lints]
workspace = true
