[package]
name = "rsomics-models"
version = "0.1.0"
description = "Pinned DL-model registry + per-OS cache + sha256-verify for the rsomics-* tool family. Layer A primitive."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
categories = ["science"]
keywords = ["bioinformatics", "deep-learning", "model-registry", "cache"]

[dependencies]
sha2 = "0.10"
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
