[package]
name = "rsomics-seqio"
version = "0.1.0"
description = "Fast FASTQ reader for the rsomics-* tool family: decode-only producer thread + parallel parse, ISA-L igzip gz backend on Linux and a pure-Rust decoder elsewhere. Layer A primitive."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
categories = ["science"]
keywords = ["fastq", "bioinformatics", "bgzf", "gzip", "reader"]
readme = "README.md"

# Backend is selected by target, not by Cargo feature: ISA-L igzip on Linux
# (where isal-sys builds and the perf contract is enforced), pure-Rust
# flate2/zlib-rs everywhere else (ISA-L's aarch64 asm does not build under
# Apple's assembler). No feature knob → `--all-features` cannot accidentally
# disable the igzip path on Linux.
[dependencies]
rsomics-common = { path = "../rsomics-common", version = "0.5" }
# Non-Linux gz backend (Quadrant ①: pure Rust, zlib-rs); also the dev/bench
# reference decoder.
flate2 = { workspace = true }
crossbeam-channel = "0.5"
# Parallel slab parsing: each raw-byte slab is parsed into OwnedRecords across
# the rayon thread pool so record allocation is off the single reader thread.
rayon = { workspace = true }

# Linux gz backend: the isolated Quadrant-② FFI crate wrapping ISA-L igzip.
# All unsafe is contained in rsomics-igzip; this crate stays 100% safe.
[target.'cfg(target_os = "linux")'.dependencies]
rsomics-igzip = { path = "../rsomics-igzip", version = "0.1" }

[dev-dependencies]
tempfile = "3"
criterion = { workspace = true }
flate2 = { workspace = true }

[[bench]]
name = "seqio_gz"
harness = false

[lints]
workspace = true
