[package]
name = "rsomics-fastp"
version = "0.0.0"
description = "Pure-Rust FASTQ preprocessor — adapter trimming, quality filtering, UMI handling, polyG trimming, JSON+HTML QC reports. Output-compatible with OpenGene/fastp."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[features]
default = []
libdeflate = ["dep:libdeflater"]
test-support = []

[dependencies]
rsomics-common = { path = "../../foundation/rsomics-common" }
anyhow.workspace = true
clap.workspace = true
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

needletail = "0.7"
noodles = { workspace = true, features = ["fastq"] }
libdeflater = { version = "1.25", optional = true }

[dev-dependencies]
anyhow.workspace = true

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }

[[bin]]
name = "rsomics-fastp"
path = "src/main.rs"
