[package]
name = "rsomics-fastp"
version = "0.0.0"
description = "Pure-Rust FASTQ preprocessor — adapter trimming, quality filtering, polyG trimming, JSON QC reports. Output-compatible with OpenGene/fastp."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "README.md"
keywords = ["bioinformatics", "fastq", "preprocessing", "ngs", "qc"]
categories = ["command-line-utilities", "science::bioinformatics"]

[features]
default = []
libdeflate = ["dep:libdeflater"]

[dependencies]
rsomics-common = { path = "../../foundation/rsomics-common", version = "0.0.0" }
clap.workspace = true
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

flate2.workspace = true
needletail = "0.7"
noodles = { workspace = true, features = ["fastq"] }
libdeflater = { version = "1.25", optional = true }

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.7", default-features = false, features = ["html_reports"] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }

[[bin]]
name = "rsomics-fastp"
path = "src/main.rs"

[[bench]]
name = "fastp"
harness = false
