[package]
name = "rsomics-bam-idxstats"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Per-reference read counts from a BAM index — Rust port of samtools idxstats"

[[bin]]
name = "rsomics-bam-idxstats"
path = "src/main.rs"

[dependencies]
rsomics-common = { path = "../../../foundation/rsomics-common", version = "0.5" }
rsomics-help = { path = "../../../foundation/rsomics-help", version = "0.3" }
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
noodles = { workspace = true, features = ["sam", "bam"] }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
