[package]
name = "rsomics-bed-complement"
version = "0.1.0"
description = "Emit regions of each chromosome NOT covered by the input BED, bounded by a genome size file. Rust reimplementation of `bedtools complement`."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
categories = ["science", "command-line-utilities"]
keywords = ["bed", "bedtools", "complement", "intervals", "bioinformatics"]

[[bin]]
name = "rsomics-bed-complement"
path = "src/main.rs"

[dependencies]
rsomics-common = { path = "../../../foundation/rsomics-common", version = "0.5" }
rsomics-help = { path = "../../../foundation/rsomics-help", version = "0.3" }
rsomics-intervals = { path = "../../../foundation/rsomics-intervals", version = "0.1" }
clap = { workspace = true, features = ["derive"] }
anyhow.workspace = true

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
