[package]
name = "rsomics-bed-flank"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Create flanking regions adjacent to BED intervals — bedtools flank equivalent"

[[bin]]
name = "rsomics-bed-flank"
path = "src/main.rs"

[dependencies]
rsomics-common = { path = "../../../foundation/rsomics-common", version = "0.5" }
rsomics-help = { path = "../../../foundation/rsomics-help", version = "0.3" }
clap.workspace = true

[lints]
workspace = true
