[package]
name = "rsomics-bed-getfasta"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Extract FASTA sequences for BED regions from an indexed reference — bedtools getfasta"

[[bin]]
name = "rsomics-bed-getfasta"
path = "src/main.rs"

[dependencies]
rsomics-common = { path = "../../../foundation/rsomics-common", version = "0.5" }
rsomics-help = { path = "../../../foundation/rsomics-help", version = "0.3" }
rsomics-fasta-index = { path = "../rsomics-fasta-index", version = "0.1" }
clap.workspace = true

[lints]
workspace = true
