[package]
name = "rsomics-bed-jaccard"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Compute Jaccard similarity between two BED files — bedtools jaccard"

[[bin]]
name = "rsomics-bed-jaccard"
path = "src/main.rs"

[dependencies]
rsomics-common = { path = "../../../foundation/rsomics-common", version = "0.5" }
rsomics-help = { path = "../../../foundation/rsomics-help", version = "0.3" }
clap.workspace = true

[lints]
workspace = true
