[package]
name = "rsomics-bed-merge"
version = "0.2.0"
description = "Merge overlapping/touching intervals in a pre-sorted BED. Rust reimplementation of `bedtools merge`."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
categories = ["science", "command-line-utilities"]
keywords = ["bed", "bedtools", "intervals", "bioinformatics", "merge"]

[[bin]]
name = "rsomics-bed-merge"
path = "src/main.rs"

[dependencies]
rsomics-common = { path = "../../../foundation/rsomics-common", version = "0.5" }
rsomics-help = { path = "../../../foundation/rsomics-help", version = "0.3" }
rsomics-intervals = { path = "../../../foundation/rsomics-intervals", version = "0.1" }
clap = { workspace = true, features = ["derive"] }
anyhow.workspace = true

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
