[package]
name = "rsomics-bed-random"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Generate random BED intervals — bedtools random equivalent"

[[bin]]
name = "rsomics-bed-random"
path = "src/main.rs"

[dependencies]
rsomics-common = { path = "../../../foundation/rsomics-common", version = "0.5" }
rsomics-help = { path = "../../../foundation/rsomics-help", version = "0.3" }
clap.workspace = true
rand = "0.8"

[lints]
workspace = true
