[package]
name = "rsomics-bed-sort"
version = "0.1.0"
description = "Sort BED records by chromosome then start position. Rust reimplementation of `bedtools sort`."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
categories = ["science", "command-line-utilities"]
keywords = ["bed", "bedtools", "sort", "intervals", "bioinformatics"]

[[bin]]
name = "rsomics-bed-sort"
path = "src/main.rs"

[dependencies]
rsomics-common = { path = "../../../foundation/rsomics-common", version = "0.5" }
rsomics-help = { path = "../../../foundation/rsomics-help", version = "0.3" }
rsomics-intervals = { path = "../../../foundation/rsomics-intervals", version = "0.1" }
clap = { workspace = true, features = ["derive"] }
anyhow.workspace = true

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
