[package]
name = "rsomics-bed-stats"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "BED interval statistics — total count, total bases, mean/median length"
[[bin]]
name = "rsomics-bed-stats"
path = "src/main.rs"
[dependencies]
rsomics-common = { path = "../../../foundation/rsomics-common", version = "0.5" }
rsomics-help = { path = "../../../foundation/rsomics-help", version = "0.3" }
clap.workspace = true
[lints]
workspace = true
