[package]
name = "rsomics-bed-subtract"
version = "0.1.1"
description = "Subtract one BED file's coverage from another, emitting residual regions. Rust reimplementation of `bedtools subtract`."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
categories = ["science", "command-line-utilities"]
keywords = ["bed", "bedtools", "subtract", "intervals", "bioinformatics"]

[[bin]]
name = "rsomics-bed-subtract"
path = "src/main.rs"

[dependencies]
rsomics-common = { path = "../../../foundation/rsomics-common", version = "0.5" }
rsomics-help = { path = "../../../foundation/rsomics-help", version = "0.3" }
rsomics-intervals = { path = "../../../foundation/rsomics-intervals", version = "0.1" }
clap = { workspace = true, features = ["derive"] }
anyhow.workspace = true

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
