[package]
name = "rsomics-fasta-count"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Count sequences in FASTA files (gz-transparent)"

[[bin]]
name = "rsomics-fasta-count"
path = "src/main.rs"

[dependencies]
rsomics-common = { path = "../../../foundation/rsomics-common", version = "0.5" }
rsomics-help = { path = "../../../foundation/rsomics-help", version = "0.3" }
clap.workspace = true
needletail = { version = "0.7", default-features = false, features = ["compression"] }

[lints]
workspace = true
